# athanor-app

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
apps/ios/: .gitignore  build-ffi.sh  generate.sh  project-real.yml  project.local.yml.template  project.yml
apps/ios/Sources/App/: AppModel.swift  AthanorApp.swift  ContentView.swift  Info.plist  KeychainKeyStore.swift
apps/ios/Sources/Engine/: AthanorEngineProtocol.swift  BellowsController.swift  DemoEngine.swift  ModelDownloader.swift  ModelTier.swift  RealBellowsController.swift  RealEngineLoader.swift
apps/ios/Sources/Screens/: DemoLabel.swift  FurnaceScreen.swift  FurnaceShell.swift  GrimoireScreen.swift  HomeDial.swift  InitiationScreen.swift  MercuryScreen.swift  SessionScreen.swift  TabulaScreen.swift  ThreadDetailScreen.swift  TranscriptView.swift
apps/ios/Sources/Theme/: Glyphs.swift  StreamingText.swift  Theme.swift
crates/athanor-cli/: Cargo.toml
crates/athanor-cli/src/: lib.rs  main.rs  script.rs
crates/athanor-cli/src/seed/: mod.rs  parse.rs  profiles.rs  translate.rs
crates/athanor-cli/tests/: cli_smoke.rs
crates/athanor-core/: Cargo.toml
crates/athanor-core/prompts/: README.md  condensation.md  condense.md  identity.md  initiation.md  judge.md
crates/athanor-core/prompts/masks/: adamas.md  philosophus.md  solve.md
crates/athanor-core/prompts/modes/: challenge.md  design.md  explain.md  predict.md  trace.md
crates/athanor-core/src/: conductor.rs  domain.rs  error.rs  heat.rs  ids.rs  lib.rs  mask.rs  register.rs  session.rs  tabula.rs  transcript.rs
crates/athanor-core/src/engine/: acp.rs  goose.rs  mock.rs  mod.rs
crates/athanor-core/src/mystagogue/: acp.rs  mod.rs
crates/athanor-core/src/prompt/: assets.rs  mod.rs
crates/athanor-core/src/store/: correspondences.rs  domains.rs  kindling.rs  migrations.rs  mod.rs  profile.rs  realizations.rs  recall.rs  session_notes.rs  sessions.rs  tending.rs  threads.rs  traces.rs
crates/athanor-core/tests/: prompt_snapshots.rs
crates/athanor-core/tests/snapshots/: adamas__challenge.txt  adamas__design.txt  adamas__explain.txt  adamas__predict.txt  adamas__trace.txt  initiation.txt  philosophus__challenge.txt  philosophus__design.txt  philosophus__explain.txt  philosophus__predict.txt  philosophus__trace.txt  solve__challenge.txt  solve__design.txt  solve__explain.txt  solve__predict.txt  solve__trace.txt
crates/evals/: Cargo.toml
crates/evals/examples/: eval.rs
crates/evals/fixtures/: expected_persona_report.json
crates/evals/src/: grade.rs  lib.rs  normalize.rs  personas.rs  report.rs  run.rs
crates/ffi/: Cargo.toml  uniffi-bindgen.rs
crates/ffi/src/: bellows.rs  engine.rs  events.rs  lib.rs  records.rs  session.rs
crates/ffi/tests/: bridge_e2e.rs
crates/stt/: Cargo.toml  README.md
crates/stt/src/: bias.rs  chunk.rs  decoder.rs  endpoint.rs  finalize.rs  lib.rs  whisper.rs
crates/stt/tests/: stream_append_only.rs
design/icon/: generate.sh
docs/: agent-brief.md  device-install.md  gestures.md  grimoire.md  invariants.md
docs/plans/: 2026-07-06-athanor-app-implementation.REVIEW.md  2026-07-06-athanor-app-implementation.md  2026-07-10-testflight-release-workflow-notes.md
docs/research/: goose-embedding-feedback.md  lived-seed-mapping.md
fixtures/normy/: STATE.md
fixtures/normy/domains/crumb/: correspondences.md
fixtures/normy/domains/proofing/: correspondences.md
fixtures/normy/domains/scoring/: correspondences.md
fixtures/normy/domains/starter/: correspondences.md
fixtures/normy/grimoire/: journal.md
fixtures/normy/profile/: learner.md
