[workspace]
resolver = "2"
members = ["crates/athanor-core", "crates/ffi", "crates/stt"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
