[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# Proc-macro mode only — no build.rs, no UDL, no `uniffi` build-dependency.
# Scaffolding is generated entirely by `uniffi::setup_scaffolding!()` plus the
# `#[derive(uniffi::...)]` / `#[uniffi::export]` attributes at compile time.
# Swift bindings are produced separately by the `uniffi-bindgen` CLI, which is
# not a build-dependency of this crate.
[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
uniffi = { version = "0.31", features = ["tokio"] }
athanor-core = { path = "../athanor-core" }
# The Bellows bridge wraps stt::SttStream. The dep is unconditional with default
# (hermetic) features so `cargo test --workspace` exercises the bridge against
# stt's ScriptedDecoder seam with no native toolchain or model file. Only the
# native whisper backend is feature-gated below (ffi/whisper -> stt/whisper).
stt = { path = "../stt" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
serde_json = { workspace = true }

# Dev-only helper binary that runs `uniffi-bindgen` to generate the Swift
# bindings from a compiled library. Gated behind a feature so `uniffi`'s `cli`
# feature (and its extra deps) never lands in the shipped cdylib/staticlib
# built for iOS.
[features]
uniffi-bindgen-cli = ["uniffi/cli"]
# Passthrough feature flags that select the real backends for the iOS build.
# `goose` turns on the embedded agent engine in athanor-core (Anthropic-backed
# sessions). OFF by default so `cargo test --workspace` and host builds stay
# hermetic. See Phase 4 plan D1.
goose = ["athanor-core/goose"]
# Passthrough to stt's native whisper backend (whisper-rs + vendored whisper.cpp,
# Metal). The stt dep itself is unconditional (default/hermetic features) so the
# bridge's ScriptedDecoder tests always run; only the native backend is gated.
# Gates `BellowsHandle::open`, which needs `SttStream::with_model`.
whisper = ["stt/whisper"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-bindgen-cli"]
